--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "googleapis": "^157.0.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "resend": "^6.0.1"
+    "resend": "^6.0.1",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
