--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^157.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "qr-code-styling": "^1.9.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.1",
